@@ -121,14 +121,14 @@ void CD3D9ShaderMaterialRenderer::OnSetMaterial(const video::SMaterial& material
 
 			// set new vertex shader
 			if (FAILED(pID3DDevice->SetVertexShader(VertexShader)))
-				os::Printer::log("Could not set vertex shader.");
+				os::Printer::log("Could not set vertex shader.", ELL_WARNING);
 		}
 
 		// set new pixel shader
 		if (PixelShader)
 		{
 			if (FAILED(pID3DDevice->SetPixelShader(PixelShader)))
-				os::Printer::log("Could not set pixel shader.");
+				os::Printer::log("Could not set pixel shader.", ELL_WARNING);
 		}
 
 		if (BaseMaterial)
@@ -201,8 +201,8 @@ bool CD3D9ShaderMaterialRenderer::createPixelShader(const c8* pxsh)
 	if (errors)
 	{
 		// print out compilation errors.
-		os::Printer::log("Pixel shader compilation failed:");
-		os::Printer::log((c8*)errors->GetBufferPointer());
+		os::Printer::log("Pixel shader compilation failed:", ELL_ERROR);
+		os::Printer::log((c8*)errors->GetBufferPointer(), ELL_ERROR);
 
 		if (code)
 			code->Release();
@@ -213,7 +213,7 @@ bool CD3D9ShaderMaterialRenderer::createPixelShader(const c8* pxsh)
 
 	if (FAILED(pID3DDevice->CreatePixelShader((DWORD*)code->GetBufferPointer(), &PixelShader)))
 	{
-		os::Printer::log("Could not create pixel shader.");
+		os::Printer::log("Could not create pixel shader.", ELL_ERROR);
 		code->Release();
 		return false;
 	}
@@ -260,8 +260,8 @@ bool CD3D9ShaderMaterialRenderer::createVertexShader(const char* vtxsh)
 	if (errors)
 	{
 		// print out compilation errors.
-		os::Printer::log("Vertex shader compilation failed:");
-		os::Printer::log((c8*)errors->GetBufferPointer());
+		os::Printer::log("Vertex shader compilation failed:", ELL_ERROR);
+		os::Printer::log((c8*)errors->GetBufferPointer(), ELL_ERROR);
 
 		if (code)
 			code->Release();
@@ -272,7 +272,7 @@ bool CD3D9ShaderMaterialRenderer::createVertexShader(const char* vtxsh)
 
 	if (!code || FAILED(pID3DDevice->CreateVertexShader((DWORD*)code->GetBufferPointer(), &VertexShader)))
 	{
-		os::Printer::log("Could not create vertex shader.");
+		os::Printer::log("Could not create vertex shader.", ELL_ERROR);
 		if (code)
 			code->Release();
 		return false;
